k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fh-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fh-postgres
  template:
    metadata:
      labels:
        app: fh-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: fh-postgredb
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: fh-postgredb
          persistentVolumeClaim:
            claimName: fh-postgres-pv-claim2
---
apiVersion: v1
kind: Service
metadata:
  name: fh-postgres
  labels:
    app: fh-postgres
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30040
  selector:
    app: fh-postgres
