k8s/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fh-local-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: fh.opracs.com
      http:
        paths:
          - backend:
              service:
                name: fh-server-app
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - fh.opracs.com
      secretName: tls-fh-ingress
